syntax = "proto3";

package check_user;

service UserInfo {
    rpc GetRole (UserInfoRequest) returns (UserInfoReply);
}

message UserInfoRequest {
    bytes id = 1;
}

message UserInfoReply {
    string username = 1;
    Role role = 2;
    string resources = 3;
}

enum Role {
    SuperUs = 0;
    Administrator = 1;
    Operador = 2;
    Productor = 3;
}
